# HyperCube

./: .gitignore  CMakeLists.txt  HyperCube.html  README.md  compile.sh  requirements.txt
opencv/: CMakeLists.txt  Makefile  camera.cpp  install.sh  socket.cpp  test.cpp
python/: HyperCube.py
server/: CMakeLists.txt  connect.c  connect.h  server.cpp
sockets/server/: client.html  hypercube.js  package.json  push.html  server.js
src/: CMakeLists.txt  camera.cpp  camera.h  client.cpp  client.h  main.cpp  screen.cpp  screen.h  server.cpp  server.h
src/server/: CMakeLists.txt  server.cpp  sockets.c  sockets.h
